# space-logic-adventure

./: .gitignore  CMakeLists.txt  LICENSE  README.md  creditsscreen.cpp  creditsscreen.hpp  cross-compile-for-android.sh  cross-compile-for-win32.sh  endscreen.cpp  endscreen.hpp  eventreceiver.hpp  hero.cpp  hero.hpp  index.html  level.cpp  level.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  menuscreen.cpp  menuscreen.hpp  screen.hpp  soundmanager.cpp  soundmanager.hpp  spriteinfo.hpp  tileset.hpp  utils.hpp
android/jni/: Android.mk  Application.mk
android/res/values/: strings.xml
gfx/: License.txt
sfx/: License.txt
tools/: tileset_gen.py
